# search_engine

./: CMakeLists.txt  ConvertJSON.cpp  ConvertJSON.h  InvertedIndex.cpp  InvertedIndex.h  main.cpp
FilesToIndex/: file001.txt  file002.txt  file003.txt  file005.txt  file018.txt
Headers/: ConvertJSON.h  SearchServer.h
Source/: ConvertJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
Tests/: CMakeLists.txt  test_Invertedindex.cpp  test_searchServer.cpp
